--- a/app/index.html
+++ b/app/index.html
@@ -261,6 +261,8 @@
 <!-- se existirem -->
 <script src="core/admin.js"></script>
 <script src="core/ai.builder.js"></script>
+<script src="core/commands.js"></script>
+<script src="core/ui_bindings.js"></script>
 
 <!-- APP (por último) -->
 <script src="app.js"></script>
